--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -2,7 +2,7 @@
 
 
 // 1 - TOOLS
-//@import '1-tools/bourbon/bourbon'
+@import '1-tools/bourbon/bourbon'
 @import '1-tools/fonts'
 @import '1-tools/normalize'
 @import '1-tools/vars' 
@@ -22,3 +22,5 @@
 
 // 4 - pages
 @import '4-pages/signin'
+@import '4-pages/dashboard'
+@import '4-pages/header'
