--- a/assets/css/1-tools/_normalize.scss
+++ b/assets/css/1-tools/_normalize.scss
@@ -9,6 +9,9 @@ html {
   -webkit-font-smoothing: antialiased;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
